final right margin fix on mobile

--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,17 @@
   padding: 0;
 }
 
+nav {
+  margin: 0;
+  padding: 0;
+}
+
 html,body {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
-}
-
-nav {
-  margin: 0;
-  padding: 0;
 }
 
 body {
@@ -79,7 +79,7 @@ nav > i {
 #logo {
   position: fixed;
   left: 50%;
-  width: auto;
+  width: 130px;
   margin-left: -65px;
 }
 
